tests/functional/lang/parse-fail-eof-pos.err.exp
at «stdin»:3:1:
            2| # no content
            3|
             | ^

       error: syntax error, unexpected end of file
